// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipControl render should not render tooltips when there are no open tooltips 1`] = `""`;

exports[`TooltipControl render should render tooltip popover with custom tooltip content when renderTooltipContent provided 1`] = `
<TooltipPopover
  addFilters={[Function]}
  closeTooltip={[Function]}
  features={
    Array [
      Object {
        "geometry": Object {},
        "id": 1,
        "layerId": "tfi3f",
      },
    ]
  }
  geoFields={
    Array [
      Object {},
    ]
  }
  index={0}
  isLocked={false}
  key="1"
  layerList={
    Array [
      Object {
        "canShowTooltip": [Function],
        "getFeatureById": [Function],
        "getId": [Function],
        "getMbLayerIds": [Function],
      },
    ]
  }
  location={
    Array [
      -120,
      30,
    ]
  }
  mbMap={
    Object {
      "getBounds": [Function],
      "getLayer": [Function],
      "off": [Function],
      "on": [Function],
      "project": [Function],
      "queryRenderedFeatures": [Function],
    }
  }
  renderTooltipContent={[Function]}
/>
`;

exports[`TooltipControl render should render tooltip popover with features tooltip content 1`] = `
<TooltipPopover
  addFilters={[Function]}
  closeTooltip={[Function]}
  features={
    Array [
      Object {
        "geometry": Object {},
        "id": 1,
        "layerId": "tfi3f",
      },
    ]
  }
  geoFields={
    Array [
      Object {},
    ]
  }
  index={0}
  isLocked={false}
  key="1"
  layerList={
    Array [
      Object {
        "canShowTooltip": [Function],
        "getFeatureById": [Function],
        "getId": [Function],
        "getMbLayerIds": [Function],
      },
    ]
  }
  location={
    Array [
      -120,
      30,
    ]
  }
  mbMap={
    Object {
      "getBounds": [Function],
      "getLayer": [Function],
      "off": [Function],
      "on": [Function],
      "project": [Function],
      "queryRenderedFeatures": [Function],
    }
  }
/>
`;
